--- a/function/main_app/templates/account/signup.html
+++ b/function/main_app/templates/account/signup.html
@@ -5,17 +5,147 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+
+<style>
+
+  h1 {
+    margin-top: 65px;
+  }
+
+  h6 {
+    font-size: 10pt;
+    color: gray;
+    margin-top: 15px;
+    margin-bottom: 50px;
+  }
+
+  label {
+    float: left;
+  }
+
+  span {
+        display: block;
+        overflow: hidden;
+        width: 400px;
+        float: right;
+  }
+
+  form {
+    margin-top: 30px;
+  }
+
+  #Connect_to_SignIn {
+    color: gray;
+    margin-bottom: 30px;
+  }
+
+  #Connect_to_SignIn:hover {
+    color: blueviolet;
+  }
+
+  #NAME {
+    margin: auto;
+    margin-bottom: 35px;
+  }
+
+  #ID {
+    margin: auto;
+    margin-bottom: 35px;
+  }
+
+  #E-mail {
+    margin: auto;
+    margin-bottom: 35px;
+  }
+
+  #PW {
+    margin: auto;
+    margin-bottom: 35px;
+  }
+
+  #Check_PW {
+    margin: auto;
+    margin-bottom: 30px;
+  }
+
+  #sign_up_button {
+    margin: auto;
+    margin-top: 55px;
+  }
+
+</style>
+
 <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<h6>
+  이미 계정이 있으신가요? 지금 바로
+  <a href="{{ login_url }}" id="Connect_to_SignIn">로그인</a>
+  하세요.
+</h6>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+    {% csrf_token %}
+    <!-- Name Form -->
+    <div class="row" id="login_form">
+      <div class="col-sm-8 col-md-6 col-lg-4" id="NAME"> 
+        <label for="id_username">성함</label>
+        <span><input type="text" class="form-control" name="name" placeholder="성함" autocomplete="name" minlength="1" maxlength="150" required id="name of user"></span>
+      </div>
+    </div>
+    
+    <!-- ID Form -->
+    <div class="row" id="login_form">
+      <div class="col-sm-8 col-md-6 col-lg-4" id="ID"> 
+        <label for="id_username">아이디</label>
+        <span>
+          <input type="text" class="form-control" name="username" placeholder="아이디" autocomplete="username" minlength="1" maxlength="150" required id="id_username">
+        </span>
+        </div>
+    </div>
+
+    <!-- E-mail Form -->
+    <div class="row" id="login_form">
+      <div class="col-sm-8 col-md-6 col-lg-4" id="E-mail"> 
+        <label for="id_email">이메일 (선택사항)</label>
+        <span>
+          <input type="email" class="form-control" name="email" placeholder="이메일 주소" autocomplete="email" id="id_email">
+        </span>
+      </div>
+    </div>
+
+
+    <!-- Password Form -->
+    <div class="row" id="login_form">
+      <div class="col-sm-8 col-md-8 col-lg-4" id="PW"> 
+        <label for="id_password1">비밀번호</label>
+        <span>
+          <input type="password" class="form-control" name="password1" placeholder="비밀번호" autocomplete="new-password" required id="id_password1">
+        </span>
+      </div>
+    </div>
+
+    <!-- Check Password Form -->
+    <div class="row" id="login_form">
+      <div class="col-sm-8 col-md-8 col-lg-4" id="Check_PW"> 
+        <label for="id_password2">비밀번호 (확인)</label>
+        <span>
+          <input type="password" class="form-control" name="password2" placeholder="비밀번호 (확인)" required id="id_password2">
+        </span>
+      </div>
+    </div>
+   
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+
+  <!--Sign Up Button-->
+  <div class="row">
+    <div class="col-sm-10 col-md-8 col-lg-6" id="sign_up_button"> <!--문제) sm보다 작아지는 경우 화면의 width와 로그인 버튼의 width가 일치함.-->
+      <button type="submit" class="btn btn-dark btn-lg btn-block" style="margin:auto;">{% trans "Sign Up" %} &raquo;</button>
+    </div>
+  </div>
+
 </form>
 
 {% endblock %}
