modify nav for signup and side and logout page

--- a/function/main_app/templates/base2.html
+++ b/function/main_app/templates/base2.html
@@ -114,6 +114,8 @@
                     style="background-color: rgb(219, 204, 184);">예약석 초기화</a>
                 <a href="/room_status/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">객실 상태</a>
+                <a href="/parkinglot/" class="list-group-item list-group-item-action"
+                    style="background-color: rgb(219, 204, 184);">주차 페이지</a>
                 <a href="#" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">생겨날 메뉴</a>
                 <a href="/admin/" class="list-group-item list-group-item-action"
@@ -146,8 +148,6 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item "><a class="nav-link" href="/accounts/logout"
                                 style="font-size: small;">로그아웃</a></li>
-                        <li class="nav-item "><a class="nav-link" href="/accounts/signup/"
-                                style="font-size: small;">회원가입</a>
                         </li>
                     </ul>
                 </div>
