--- a/function/main_app/templates/account/logout.html
+++ b/function/main_app/templates/account/logout.html
@@ -1,13 +1,46 @@
-{% extends "account/base.html" %}
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+<!DOCTYPE html>
+<html lang="ko">
 
-{% block content %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400&display=swap">
 
-<style>
+    <title>{% block head_title %}{% trans "Sign Out" %}{% endblock %}</title>
+    {% block extra_head %}
+    {% endblock %}
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: rgb(255, 255, 253);
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
 
+        .navbar {
+            height: 80px;
+            font-family: 'Roboto', sans-serif;
+            background-color: rgb(219, 204, 184);
+            font-size: larger;
+        }
+
+        .footer {
+            font-family: 'Roboto', sans-serif;
+            width: 100%;
+            height: 100px;
+            position: absolute;
+            bottom: 0;
+            background: rgb(90, 83, 74);
+            text-align: center;
+            color: black;
+        }
+        
   h1 {
     margin-top: 150px;
   }
@@ -23,26 +56,88 @@
   #sign_out_button {
     margin: auto;
   }
+    </style>
+</head>
 
-</style>
+<body>
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+            <ul class="navbar-nav mr-auto">
 
-<h1>{% trans "Sign Out" %}</h1>
+            </ul>
+        </div>
+        <div class="mx-auto order-0">
+            <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/"
+                style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB HOTEL</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
 
-<h6>{% trans 'Are you sure you want to sign out?' %}</h6>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %} 
-  {% endif %}
+    {% block body %}
 
-  <!--Sign Out Button-->
-  <div class="row">
-    <div class="col-sm-4 col-md-4 col-lg-4" id="sign_out_button"> <!--문제) sm보다 작아지는 경우 화면의 width와 로그인 버튼의 width가 일치함.-->
-      <button type="submit" class="btn btn-dark btn-lg btn-block" style="margin:auto;">{% trans "Sign Out" %}</button>
-    </div>
-  </div>
+    <h1>{% trans "Sign Out" %}</h1>
 
-</form>
+    <h6>{% trans 'Are you sure you want to sign out?' %}</h6>
+    
+    <form method="post" action="{% url 'account_logout' %}">
+      {% csrf_token %}
+      {% if redirect_field_value %} 
+      {% endif %}
+    
+      <!--Sign Out Button-->
+      <div class="row">
+        <div class="col-sm-4 col-md-4 col-lg-4" id="sign_out_button"> <!--문제) sm보다 작아지는 경우 화면의 width와 로그인 버튼의 width가 일치함.-->
+          <button type="submit" class="btn btn-dark btn-lg btn-block" style="margin:auto;">{% trans "Sign Out" %}</button>
+        </div>
+      </div>
+    
+    </form>
 
+    {% endblock %}
+    {% block extra_body %}
+    {% endblock %}
 
-{% endblock %}
+    <footer class="footer">
+        <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-2" style="text-align: center; font-weight: bold; font-family: 'Castoro', serif;">DB<br>HOTEL</div>
+                <div class="col-sm-3" style="font-weight: bold; font-size: small;">
+                    <p>서울DB호텔 T.02-1234-1234</p>
+                    <p>제주DB호텔 T.064-1234-1234</p>
+                </div>
+                <div class="col-sm-1" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+                    <p>고객센터</p>
+                    <p>이용약관</p>
+                </div>
+                <div class="col-sm-2" style="font-weight: bold; font-size: small; color: rgb(32, 31, 29);">
+                    <p>이메일무단수집금지</p>
+                    <p>개인정보처리방침</p>
+                </div>
+                <div class="col-sm-3">
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.facebook.com/"><i
+                            class="fab fa-fw fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/"><i
+                            class="fab fa-fw fa-instagram"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1"
+                        href="https://github.com/jaehoonkimm/DB_is_Free-Hotel_DB_System"><i
+                            class="fab fa-fw fa-git"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+
