--- a/function/main_app/templates/room_status.html
+++ b/function/main_app/templates/room_status.html
@@ -117,6 +117,8 @@
                     style="background-color: rgb(219, 204, 184);">마이 페이지</a>
                 <a href="/employeeattendance/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">직원 출퇴근</a>
+                <a href="/employee_status/" class="list-group-item list-group-item-action"
+                    style="background-color: rgb(219, 204, 184);">직원 업무 현황</a>
                 <a href="/emtaskassign/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">하우스 키핑</a>
                 <a href="/realtimeclaims/" class="list-group-item list-group-item-action"
@@ -127,8 +129,6 @@
                     style="background-color: rgb(219, 204, 184);">객실 상태</a>
                 <a href="/parkinglot/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">주차 페이지</a>
-                <a href="#" class="list-group-item list-group-item-action"
-                    style="background-color: rgb(219, 204, 184);">생겨날 메뉴</a>
                 <a href="/admin/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">admin 페이지</a>
             </div>
