--- a/function/main_app/templates/parking_lot.html
+++ b/function/main_app/templates/parking_lot.html
@@ -23,30 +23,30 @@
       width: 50%;
     }
     </style>
-    <div class='left-box'>직원 차량 확인 필드 <br>
+    <div class='left-box'><h5>직원 차량 확인 필드 </h5><br>
         {% if form1 %}
             <ul>
                 {% for EmployeesParkingSystem in form1 %}
                     <li>{{ EmployeesParkingSystem.car_plate_number }}</li>
-                    employee = {{ EmployeesParkingSystem.employee }}<br>
-                    car_plate_number = {{ EmployeesParkingSystem.car_plate_number }}<br>
-                    parking_location = {{ EmployeesParkingSystem.parking_location }}<br>
-                    parking_in_timestamp = {{ EmployeesParkingSystem.parking_in_timestamp }}<br>
+                    직원 이름 = {{ EmployeesParkingSystem.employee.employee_first_name }}<br>
+                    차량 번호 = {{ EmployeesParkingSystem.car_plate_number }}<br>
+                    주차 위치 = {{ EmployeesParkingSystem.parking_location }}<br>
+                    입차 시각= {{ EmployeesParkingSystem.parking_in_timestamp }}<br>
                 {% endfor %}
             </ul>
         {% endif %}
     </div>
 
 
-    <div class='right-box'>고객 차량 확인 필드 <br>
+    <div class='right-box'><h5>고객 차량 확인 필드 </h5><br>
         {% if form2 %}
             <ul>
                 {% for CustomerParkingSystem in form2 %}
                     <li>{{ CustomerParkingSystem.car_plate_number }}</li>
-                    check_in = {{ CustomerParkingSystem.check_in }}<br>
-                    car_plate_number = {{ CustomerParkingSystem.car_plate_number }}<br>
-                    parking_location = {{ CustomerParkingSystem.parking_location }}<br>
-                    parking_in_timestamp = {{ CustomerParkingSystem.parking_in_timestamp }}<br>
+                    고객 관리 번호 = {{ CustomerParkingSystem.check_in }}<br>
+                    차량 번호 = {{ CustomerParkingSystem.car_plate_number }}<br>
+                    주차 위치 = {{ CustomerParkingSystem.parking_location }}<br>
+                    입차 시각 = {{ CustomerParkingSystem.parking_in_timestamp }}<br>
                 {% endfor %}
             </ul>
         {% endif %}
