--- a/function/main_app/templates/mypage.html
+++ b/function/main_app/templates/mypage.html
@@ -23,7 +23,6 @@
                 <td><B>업무</B></td>
             </tr>
             </thead>
-
     <tbody>
         {% for RealtimeClaim in your_task %}
         <tr>
@@ -33,7 +32,7 @@
         </tr>
         {% endfor %}
     </tbody>
-    
+</table>
 </div>
 
    
