출퇴근 버튼 수정

--- a/function/main_app/templates/employee_attendance.html
+++ b/function/main_app/templates/employee_attendance.html
@@ -19,7 +19,7 @@
 
     {% csrf_token %}
     {{ form1.as_p }}
-    <button type="submit" class="btn btn-dark">배정하기</button>
+    <button type="submit" class="btn btn-dark">출근하기</button>
     </form>
 
     <h3 class="my-3 border-bottom pb-2">퇴근 확인</h3>
@@ -30,7 +30,7 @@
 
     {% csrf_token %}
     {{ form2.as_p }}
-    <button type="submit" class="btn btn-dark">배정하기</button>
+    <button type="submit" class="btn btn-dark">퇴근하기</button>
     </form>
     
 </div>
