fix: room_status page view_adjust line break point

--- a/function/main_app/templates/room_status.html
+++ b/function/main_app/templates/room_status.html
@@ -175,7 +175,7 @@
                     <br />
                     {% for room in room_list %}
                     {% if room.room_id > 1000 and room.room_id < 1100 %}
-                    <div class="col col-sm-1 room_box">
+                    <div class="col col-lm-1 room_box">
                         {{ room.room_id }}<br />
                         [{{ room.room_grade_id }}]<br />
                         {% if  room.room_stay == 1%}
@@ -205,7 +205,7 @@
                     <br />
                     {% for room in room_list %}
                     {% if room.room_id > 900 and room.room_id < 1000 %}
-                    <div class="col col-sm-1 room_box">
+                    <div class="col col-lm-1 room_box">
                         {{ room.room_id }}<br />
                         [{{ room.room_grade_id }}]<br />
                         {% if  room.room_stay == 1%}
@@ -235,7 +235,7 @@
                     <br />
                     {% for room in room_list %}
                     {% if room.room_id > 800 and room.room_id < 900 %}
-                    <div class="col col-sm-1 room_box">
+                    <div class="col col-lm-1 room_box">
                         {{ room.room_id }}<br />
                         [{{ room.room_grade_id }}]<br />
                         {% if  room.room_stay == 1%}
@@ -265,7 +265,7 @@
                     <br />
                     {% for room in room_list %}
                     {% if room.room_id > 700 and room.room_id < 800 %}
-                    <div class="col col-sm-1 room_box">
+                    <div class="col col-lm-1 room_box">
                         {{ room.room_id }}<br />
                         [{{ room.room_grade_id }}]<br />
                         {% if  room.room_stay == 1%}
@@ -295,7 +295,7 @@
                     <br />
                     {% for room in room_list %}
                     {% if room.room_id > 600 and room.room_id < 700 %}
-                    <div class="col col-sm-1 room_box">
+                    <div class="col col-lm-1 room_box">
                         {{ room.room_id }}<br />
                         [{{ room.room_grade_id }}]<br />
                         {% if  room.room_stay == 1%}
@@ -325,7 +325,7 @@
                     <br />
                     {% for room in room_list %}
                     {% if room.room_id > 500 and room.room_id < 600 %}
-                    <div class="col col-sm-1 room_box">
+                    <div class="col col-lm-1 room_box">
                         {{ room.room_id }}<br />
                         [{{ room.room_grade_id }}]<br />
                         {% if  room.room_stay == 1%}
