bugfix: fix all of the wrong link(127.0.0.1 for localhost link) to right link(/)

--- a/function/main_app/templates/employee_status.html
+++ b/function/main_app/templates/employee_status.html
@@ -150,7 +150,7 @@
                     </ul>
                 </div>
                 <div class="mx-auto order-0">
-                    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/"
+                    <a class="navbar-brand mx-auto" href="/"
                         style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB HOTEL</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                         <span class="navbar-toggler-icon"></span>
