--- a/function/main_app/templates/index.html
+++ b/function/main_app/templates/index.html
@@ -32,7 +32,7 @@
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
+    <a class="navbar-brand mx-auto" href="/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
       HOTEL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
       <span class="navbar-toggler-icon"></span>
@@ -239,7 +239,7 @@
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" href="http://127.0.0.1:8000/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
+    <a class="navbar-brand mx-auto" href="/" style="font-weight: bold; font-size: larger; font-family: 'Castoro', serif;">DB
       HOTEL</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
       <span class="navbar-toggler-icon"></span>
