fix: remove li tag in car_plate_number in car page

--- a/function/main_app/templates/parking_lot.html
+++ b/function/main_app/templates/parking_lot.html
@@ -189,7 +189,7 @@
                         {% if form1 %}
                             <ul>
                                 {% for EmployeesParkingSystem in form1 %}
-                                    <li><h6>{{ EmployeesParkingSystem.car_plate_number }}</h6></li>
+                                    <h6>{{ EmployeesParkingSystem.car_plate_number }}</h6>
                                     직원 이름 : {{ EmployeesParkingSystem.employee.employee_first_name }}<br>
                                     주차 위치 : {{ EmployeesParkingSystem.parking_location }}<br>
                                     입차 시각 : {{ EmployeesParkingSystem.parking_in_timestamp }}<br>
@@ -205,7 +205,7 @@
                     {% if form2 %}
                         <ul>
                             {% for CustomerParkingSystem in form2 %}
-                                <li><h6>{{ CustomerParkingSystem.car_plate_number }}</h6></li>
+                                <h6>{{ CustomerParkingSystem.car_plate_number }}</h6>
                                 고객 관리 번호 : {{ CustomerParkingSystem.check_in }}<br>
                                 주차 위치 : {{ CustomerParkingSystem.parking_location }}<br>
                                 입차 시각 : {{ CustomerParkingSystem.parking_in_timestamp }}<br>
