add: add account ID view in administrator page

--- a/function/main_app/templates/employee_status.html
+++ b/function/main_app/templates/employee_status.html
@@ -132,6 +132,9 @@
                     style="background-color: rgb(219, 204, 184);">주차 페이지</a>
                 <a href="/admin/" class="list-group-item list-group-item-action"
                     style="background-color: rgb(219, 204, 184);">admin 페이지</a>
+                <br />
+                <br />
+                <strong>{{ request.user }} 님 접속중</strong> 
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
