fix: add detail realtime claim field in mypage

--- a/function/main_app/templates/mypage.html
+++ b/function/main_app/templates/mypage.html
@@ -47,6 +47,7 @@
             <tr>
                 <td><B>객실 번호</B></td>
                 <td><B>내용</B></td>
+                <td><B>상세내용</B></td>
                 <!-- <td><B>업무</B></td> -->
                 <!-- <td><B>업무</B></td> -->
             </tr>
@@ -61,6 +62,7 @@
                 </td>
                 <div></div>
                 <td> {{ rc.realtime_clain_content }} </td>
+                <td> {{ rc.claim_note }} </td>
                 <!-- <td> <a href="{% url 'start_time' %}" class="btn btn-dark">시작하기</a></td> -->
 
                 <!-- <td> <a href="{% url 'end_time' %}" class="btn btn-dark">마감하기</a></td> -->
