--- a/function/main_app/templates/account/login.html
+++ b/function/main_app/templates/account/login.html
@@ -135,15 +135,15 @@
   <div class ="form-group" id= "social_login">
     <!-- Google Sign In -->
     <div class="socialaccount_ballot col-sm-10 col-md-15 col-lg-20" id="Google_Sign_In">
-      <a class="btn btn-outline-secondary btn-lg btn-block" href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?client_id=256529224806-182ll6sbit6s78fk4e8mse6nji6jphrr.apps.googleusercontent.com&redirect_uri=http%3A%2F%2F127.0.0.1%3A8000%2Faccounts%2Fgoogle%2Flogin%2Fcallback%2F&scope=profile&response_type=code&state=Idu4H14KuZVP&flowName=GeneralOAuthFlow"> Google 로그인</a>
+      <a class="btn btn-outline-secondary btn-lg btn-block" href="socialaccount/snippets/provider_list.html"> Google 로그인</a>
     </div>
 
     <!--하단 부분은 시간이 있을 때 추가적으로 넣으면 하는 부분 / 각 소셜 API를 django에 추가해줘야해서 시간 소모 예정.-->
     <!-- Naver Sign In -->
     <div class="socialaccount_ballot col-sm-10 col-md-15 col-lg-20" id="Naver_Sign_In">
-      <a class="btn btn-outline-success btn-lg btn-block" href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?client_id=256529224806-182ll6sbit6s78fk4e8mse6nji6jphrr.apps.googleusercontent.com&redirect_uri=http%3A%2F%2F127.0.0.1%3A8000%2Faccounts%2Fgoogle%2Flogin%2Fcallback%2F&scope=profile&response_type=code&state=Idu4H14KuZVP&flowName=GeneralOAuthFlow"> Naver 로그인</a>
+      <a class="btn btn-outline-success btn-lg btn-block" href="socialaccount/snippets/provider_list.html"> Naver 로그인</a>
     </div>
-
+    
     <!-- Facebook Sign In -->
     <div class="socialaccount_ballot col-sm-10 col-md-15 col-lg-20" id="Facebook_Sign_In">
       <a class="btn btn-outline-primary btn-lg btn-block" href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?client_id=256529224806-182ll6sbit6s78fk4e8mse6nji6jphrr.apps.googleusercontent.com&redirect_uri=http%3A%2F%2F127.0.0.1%3A8000%2Faccounts%2Fgoogle%2Flogin%2Fcallback%2F&scope=profile&response_type=code&state=Idu4H14KuZVP&flowName=GeneralOAuthFlow"> Facebook 로그인</a>
